@@ -1,48 +1,27 @@
 🎵 Noiz — JavaFX Music Player
 
-A simple desktop music player built with JavaFX. It lets you play your favorite songs, manage playlists, and enjoy smooth playback — all in one lightweight app.
+A sleek desktop music player built with JavaFX. Play your songs, manage playlists, and enjoy smooth playback — all in one lightweight app.
+
 
 
 
 🚀 Features
 
-▶️ Play / Pause any song easily
+▶️ Play / Pause songs easily
 
-🗂️ Create & Delete Playlists
-
-🔁 Repeat songs or playlists
+🗂️ Create / Delete playlists
 
 🔀 Shuffle for random playback
 
-💾 Smart Memory Handling – remembers your music library, no need to rescan every time you run the app
+🔁 Repeat songs or playlists
+
+💾 Smart Memory Handling – remembers your library, no rescanning needed
 
 
 
-🛠️ Tech Stack
 
-Language: Java
+🛠️ Tech
+
+Language: Java (JDK 17+)
 
 Framework: JavaFX
-
-Version: JDK 17+
-
-
-
-📦 How to Run
-
-Clone the repo
-
-Make sure you have JavaFX SDK set up
-
-Run the main class (Noiz.java) with these VM options:
-
---module-path "path-to-javafx-sdk/lib" --add-modules javafx.controls,javafx.fxml,javafx.media
-
-
-Add your songs and start listening 🎶
-
-💡 Future Plans
-
-Add equalizer and visualizer
-
-Improve UI with custom themes
